# GuideMe

./: README.md  api_setting.example.yaml  infer.py  infer_no_gt_history.py  pyproject.toml  score_stream.py
data/: README.md
process/: chunk_videos_1s.py  data_proprecess.py
score/config/: stream_config.yaml
score/prompts/: en_llm_judge.py
scripts/: infer.sh  infer_local.sh  infer_no_gt_history.sh  infer_no_gt_history_local.sh  preprocess.sh  score_stream.sh
tools/: api_config.py  llm_utils.py  local_backend.py  merge_infer_conv.py
